<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tourguide.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/attractions"
        style="@style/HomeScreenStyle"
        android:background="@android:color/darker_gray"
        android:text="@string/button1" />

    <TextView
        android:id="@+id/restaurants"
        style="@style/HomeScreenStyle"
        android:background="@color/colorPrimary"
        android:text="@string/button2"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/history"
        style="@style/HomeScreenStyle"
        android:background="@android:color/darker_gray"
        android:text="@string/button3" />

    <TextView
        android:id="@+id/myFavorites"
        style="@style/HomeScreenStyle"
        android:background="@color/colorPrimary"
        android:text="@string/button4"
        android:textColor="@android:color/darker_gray" />

</LinearLayout>
